Fixing navbar on small screens. Also loaded bootstrap javascripts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,12 +10,6 @@ body {
 	padding-top: 60px;
 }
 
-@media (max-width: 768px) {
-  body {
-    padding-top: 250px;
-  }
-}
-
 section {
 	overflow: auto;
 }
